@@ -1,10 +1,15 @@
 ----------------------------------------------------------------------
  OmegaT 2.2.0 update 3 
 ----------------------------------------------------------------------
-  2 Enhancements
+  3 Enhancements
   0 Bugfix
 ----------------------------------------------------------------------
 2.2.0 update 3 vs. 2.2.0 update 2
+
+  Implemented requests:
+
+  - Remove extra spaces added around tags by Google Translate
+  http://sourceforge.net/support/tracker.php?aid=2956989
 
   Other enhancements:
 
